# hello-world

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/hello_world/: __init__.py  __main__.py  main.py
tests/: test_main.py
